# verime

./: .gitignore  COPYRIGHT  Makefile  README.md  setup.cfg  verilator-me.py  verime-utils.py
src/verilator_me_package_cmomin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/verime/: verilator_me.py  verime.py  verime_utils.py
src/verime/data/: MANIFEST.in  pymod.cpp  pysimu.py  setup.py  simulation_runner.cpp  simulation_runner.h  template_makefile.mk
test/: .gitignore  Makefile  andg.v  mylib.cpp  mylib.h  test.json  test_main.cpp  test_parse.py  top.v  yo.y
test/obj_dir/: Vtop  Vtop.cpp  Vtop.h  Vtop.mk  Vtop__ALL.cpp  Vtop__ALL.d  Vtop__Syms.cpp  Vtop__Syms.h  Vtop___024root.h  Vtop___024root__DepSet_h84412442__0.cpp  Vtop___024root__DepSet_h84412442__0__Slow.cpp  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp  Vtop___024root__Slow.cpp  Vtop__ver.d  Vtop_andg.h  Vtop_andg__DepSet_h7a557650__0.cpp  Vtop_andg__DepSet_haed94cbb__0__Slow.cpp  Vtop_andg__Slow.cpp  Vtop_classes.mk  Vtop_top.h  Vtop_top__DepSet_h0f993197__0.cpp  Vtop_top__DepSet_h0f993197__0__Slow.cpp  Vtop_top__DepSet_h6315917a__0.cpp  Vtop_top__DepSet_h6315917a__0__Slow.cpp  Vtop_top__Slow.cpp  mylib.d  test_main.d  verilated.d  verilated_dpi.d
test/srcs/: andg.v  top.v
tests/: Makefile  test_main.cpp  test_main.i
tests/example/: Makefile  example_simu.py  test_counter.cpp  test_main.cpp
tests/example/srcs/: FA1bit.v  FANbits.v  counter.v  tb_counter.v
tests/srcs/: and_g.v  top.v
