[metadata]
name = verime
version = 1.0.0rc1
author = 'Charles Momin, Gaëtan Cassiers'
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    importlib_resources; python_version<'3.9'
    build >= 0.8.0

[options.packages.find]
where = src

[options.package_data]
verime.data = *.*

[options.entry_points]
console_scripts =
    verime = verime.verime:main
