[metadata]
name = verime
version = 2.0.0
author = 'Charles Momin, Gaëtan Cassiers'
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.11
include_package_data = True
install_requires =
    build >= 1.0.0

[options.packages.find]
where = src

[options.package_data]
verime.data = *.*

[options.entry_points]
console_scripts =
    verime = verime.verime:main
